# unifi-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/unifi_mcp/: __init__.py  client.py  formatting.py  network_client.py  network_formatting.py  protect_client.py  protect_formatting.py  server.py
